[package]
name = "coverall"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempfile = "3"

[dependencies]
colored = "2.1"
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
anyhow = "1.0"
indicatif = "0.17"
walkdir = "2.5.0"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"